--- a/setup.cfg
+++ b/setup.cfg
@@ -51,12 +51,8 @@ filterwarnings =
 junit_suite_name = colcon-snapshot
 
 [options.entry_points]
-colcon_core.package_augmentation =
-    check_dependency_constraint = colcon_snapshot.package_augmentation.check_dependency_constraint:CheckDependencyConstraintPackageAugmentation
 colcon_core.verb =
-    graph = colcon_snapshot.verb.graph:GraphVerb
-    info = colcon_snapshot.verb.info:InfoVerb
-    list = colcon_snapshot.verb.list:ListVerb
+    snapshot = colcon_snapshot.verb.snapshot:SnapshotVerb
 
 [flake8]
 import-order-style = google
