--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Python CI
+name: Test Workflow
 
 on:
   pull_request:
@@ -22,9 +22,9 @@ jobs:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         restore-keys: ${{ runner.os }}-pip-
-    - name: Install pip dependencies
+    - name: Install dependencies
       run: |
-        find -name "requirements.txt" -type f -exec pip install -r '{}' ';'
-    - name: Test with pytest
+        pip install -r test/requirements.txt
+    - name: Run tests
       run: |
         pytest --cov=colcon_snapshot --cov-branch
