Update subverb template

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,8 @@ junit_suite_name = colcon-snapshot
 [options.entry_points]
 colcon_core.verb =
     snapshot = colcon_snapshot.verb.snapshot:SnapshotVerb
+colcon_snapshot.subverb =
+    capture = colcon_snapshot.subverb.capture:CaptureSnapshotSubverb
 
 [flake8]
 import-order-style = google
