Refactor snapshot capture task

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,8 @@ colcon_core.verb =
     snapshot = colcon_snapshot.verb.snapshot:SnapshotVerb
 colcon_snapshot.subverb =
     capture = colcon_snapshot.subverb.capture:CaptureSnapshotSubverb
+colcon_snapshot.task.capture =
+    dirhash = colcon_snapshot.task.capture:DirhashCaptureTask
 
 [flake8]
 import-order-style = google
