Stage working task

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,8 +55,9 @@ colcon_core.verb =
     snapshot = colcon_snapshot.verb.snapshot:SnapshotVerb
 colcon_snapshot.subverb =
     capture = colcon_snapshot.subverb.capture:CaptureSnapshotSubverb
+    # info = colcon_snapshot.subverb.info:InfoSnapshotSubverb
 colcon_snapshot.task.capture =
-    dirhash = colcon_snapshot.task.capture:DirhashCaptureTask
+    dirhash = colcon_snapshot.task.capture.dirhash:DirhashCaptureTask
 
 [flake8]
 import-order-style = google
