Stage WIP on git task

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,7 @@ colcon_snapshot.subverb =
     # info = colcon_snapshot.subverb.info:InfoSnapshotSubverb
 colcon_snapshot.task.capture =
     dirhash = colcon_snapshot.task.capture.dirhash:DirhashCaptureTask
+    git = colcon_snapshot.task.capture.git:GitCaptureTask
 
 [flake8]
 import-order-style = google
