Add snapshot verb (#2)
* Stage subverb template from colcon metadata

* Update subverb template

* Stage ListMetadataSubverb as template

* Update subverb template

* Create capture task submodule

* Stage PythonStageTask as template
from https://github.com/colcon/colcon-core/pull/428

* Refactor snapshot capture task

* Stage StageVerb as template
from https://github.com/colcon/colcon-core/pull/428

* Stage refactor

* Rename file

* Stage working task

* Stage template from dirhash

* Stage WIP on git task

* Change to markdown

* Fix linter errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,12 @@ junit_suite_name = colcon-snapshot
 [options.entry_points]
 colcon_core.verb =
     snapshot = colcon_snapshot.verb.snapshot:SnapshotVerb
+colcon_snapshot.subverb =
+    capture = colcon_snapshot.subverb.capture:CaptureSnapshotSubverb
+    # info = colcon_snapshot.subverb.info:InfoSnapshotSubverb
+colcon_snapshot.task.capture =
+    dirhash = colcon_snapshot.task.capture.dirhash:DirhashCaptureTask
+    git = colcon_snapshot.task.capture.git:GitCaptureTask
 
 [flake8]
 import-order-style = google
