Rename event handler

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,8 @@ filterwarnings =
 junit_suite_name = colcon-snapshot
 
 [options.entry_points]
+colcon_core.event_handler =
+    store_lockfile = colcon_snapshot.event_handler.store_lockfile:StoreLockfileEventHandler
 colcon_core.verb =
     snapshot = colcon_snapshot.verb.snapshot:SnapshotVerb
 colcon_snapshot.subverb =
