--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,8 @@ colcon_core.event_handler =
     store_lockfile = colcon_snapshot.event_handler.store_lockfile:StoreLockfileEventHandler
 colcon_core.verb =
     snapshot = colcon_snapshot.verb.snapshot:SnapshotVerb
+colcon_core.package_selection =
+    snapshot = colcon_snapshot.package_selection.snapshot:SnapshotPackageSelectionExtension
 colcon_snapshot.subverb =
     capture = colcon_snapshot.subverb.capture:CaptureSnapshotSubverb
     # info = colcon_snapshot.subverb.info:InfoSnapshotSubverb
