Add event handler and package selection (#3)
* Stage from colcon_package_selection as template

* Refactor event handler to store lockfiles

* Rename event handler

* Refactor tasks and helper functions

* Stage slection logic

* simplify slection logic

* Fix linter

* Overload comparison for SnapshotLockfile

* Fix event handler

* Regester snapshot package_selection entry point

* Fix linters

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,8 +51,12 @@ filterwarnings =
 junit_suite_name = colcon-snapshot
 
 [options.entry_points]
+colcon_core.event_handler =
+    store_lockfile = colcon_snapshot.event_handler.store_lockfile:StoreLockfileEventHandler
 colcon_core.verb =
     snapshot = colcon_snapshot.verb.snapshot:SnapshotVerb
+colcon_core.package_selection =
+    snapshot = colcon_snapshot.package_selection.snapshot:SnapshotPackageSelectionExtension
 colcon_snapshot.subverb =
     capture = colcon_snapshot.subverb.capture:CaptureSnapshotSubverb
     # info = colcon_snapshot.subverb.info:InfoSnapshotSubverb
