Add package augmentation extensions and use them to guid in task capture extension selection

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,13 +55,16 @@ colcon_core.event_handler =
     store_lockfile = colcon_snapshot.event_handler.store_lockfile:StoreLockfileEventHandler
 colcon_core.verb =
     snapshot = colcon_snapshot.verb.snapshot:SnapshotVerb
+colcon_core.package_augmentation =
+    default = colcon_snapshot.package_augmentation.default:DefaultPackageAugmentation
+    git = colcon_snapshot.package_augmentation.git:GitPackageAugmentation
 colcon_core.package_selection =
     snapshot = colcon_snapshot.package_selection.snapshot:SnapshotPackageSelectionExtension
 colcon_snapshot.subverb =
     capture = colcon_snapshot.subverb.capture:CaptureSnapshotSubverb
     # info = colcon_snapshot.subverb.info:InfoSnapshotSubverb
 colcon_snapshot.task.capture =
-    dirhash = colcon_snapshot.task.capture.dirhash:DirhashCaptureTask
+    default = colcon_snapshot.task.capture.dirhash:DirhashCaptureTask
     git = colcon_snapshot.task.capture.git:GitCaptureTask
 
 [flake8]
