Rename colcon extension from colcon_snapshot to colcon_cache

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = colcon-snapshot
-version = attr: colcon_snapshot.__version__
+name = colcon-cache
+version = attr: colcon_cache.__version__
 url = https://colcon.readthedocs.io
 project_urls =
-    Changelog = https://github.com/ruffsl/colcon-snapshot/milestones?direction=desc&sort=due_date&state=closed
-    GitHub = https://github.com/ruffsl/colcon-snapshot/
+    Changelog = https://github.com/ruffsl/colcon-cache/milestones?direction=desc&sort=due_date&state=closed
+    GitHub = https://github.com/ruffsl/colcon-cache/
 author = Ruffin White
 author_email = roxfoxpox@gmail.com
 maintainer = Ruffin White
@@ -20,7 +20,7 @@ classifiers =
     Programming Language :: Python
     Topic :: Software Development :: Build Tools
 license = Apache License, Version 2.0
-description = Extension for colcon to snapshot package source.
+description = Extension for colcon to cache package source.
 long_description = file: README.rst
 keywords = colcon
 
@@ -48,24 +48,24 @@ zip_safe = true
 [tool:pytest]
 filterwarnings =
     error
-junit_suite_name = colcon-snapshot
+junit_suite_name = colcon-cache
 
 [options.entry_points]
 colcon_core.event_handler =
-    store_lockfile = colcon_snapshot.event_handler.store_lockfile:StoreLockfileEventHandler
+    store_lockfile = colcon_cache.event_handler.store_lockfile:StoreLockfileEventHandler
 colcon_core.verb =
-    snapshot = colcon_snapshot.verb.snapshot:SnapshotVerb
+    cache = colcon_cache.verb.cache:CacheVerb
 colcon_core.package_augmentation =
-    default = colcon_snapshot.package_augmentation.default:DefaultPackageAugmentation
-    git = colcon_snapshot.package_augmentation.git:GitPackageAugmentation
+    default = colcon_cache.package_augmentation.default:DefaultPackageAugmentation
+    git = colcon_cache.package_augmentation.git:GitPackageAugmentation
 colcon_core.package_selection =
-    snapshot = colcon_snapshot.package_selection.snapshot:SnapshotPackageSelectionExtension
-colcon_snapshot.subverb =
-    capture = colcon_snapshot.subverb.capture:CaptureSnapshotSubverb
-    # info = colcon_snapshot.subverb.info:InfoSnapshotSubverb
-colcon_snapshot.task.capture =
-    default = colcon_snapshot.task.capture.dirhash:DirhashCaptureTask
-    git = colcon_snapshot.task.capture.git:GitCaptureTask
+    cache = colcon_cache.package_selection.cache:CachePackageSelectionExtension
+colcon_cache.subverb =
+    capture = colcon_cache.subverb.capture:CaptureCacheSubverb
+    # info = colcon_cache.subverb.info:InfoCacheSubverb
+colcon_cache.task.capture =
+    default = colcon_cache.task.capture.dirhash:DirhashCaptureTask
+    git = colcon_cache.task.capture.git:GitCaptureTask
 
 [flake8]
 import-order-style = google
