--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
         pip install -r test/requirements.txt
     - name: Run tests
       run: |
-        pytest --cov=colcon_snapshot --cov-branch
+        pytest --cov=colcon_cache --cov-branch
     - uses: codecov/codecov-action@v1
       if: matrix.python-version == '3.8'
       with:
