Add package selection for lock change status

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,7 @@ colcon_core.package_augmentation =
     git = colcon_cache.package_augmentation.git:GitPackageAugmentation
 colcon_core.package_selection =
     cache = colcon_cache.package_selection.cache:CachePackageSelectionExtension
+    lock = colcon_cache.package_selection.lock:LockPackageSelectionExtension
 colcon_cache.subverb =
     capture = colcon_cache.subverb.capture:CaptureCacheSubverb
     # info = colcon_cache.subverb.info:InfoCacheSubverb
