Add verb handler extensions

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,10 @@ colcon_cache.subverb =
 colcon_cache.task.capture =
     default = colcon_cache.task.capture.dirhash:DirhashCaptureTask
     git = colcon_cache.task.capture.git:GitCaptureTask
+colcon_cache.verb_handler =
+    build = colcon_cache.verb_handler.build:BuildVerbHandler
+    cache = colcon_cache.verb_handler.cache:CacheVerbHandler
+    test = colcon_cache.verb_handler.test:TestVerbHandler
 
 [flake8]
 import-order-style = google
