--- a/setup.cfg
+++ b/setup.cfg
@@ -60,12 +60,17 @@ colcon_core.package_augmentation =
     git = colcon_cache.package_augmentation.git:GitPackageAugmentation
 colcon_core.package_selection =
     cache = colcon_cache.package_selection.cache:CachePackageSelectionExtension
+    lock = colcon_cache.package_selection.lock:LockPackageSelectionExtension
 colcon_cache.subverb =
     capture = colcon_cache.subverb.capture:CaptureCacheSubverb
     # info = colcon_cache.subverb.info:InfoCacheSubverb
 colcon_cache.task.capture =
     default = colcon_cache.task.capture.dirhash:DirhashCaptureTask
     git = colcon_cache.task.capture.git:GitCaptureTask
+colcon_cache.verb_handler =
+    build = colcon_cache.verb_handler.build:BuildVerbHandler
+    cache = colcon_cache.verb_handler.cache:CacheVerbHandler
+    test = colcon_cache.verb_handler.test:TestVerbHandler
 
 [flake8]
 import-order-style = google
