Update default package augmentation to dirhash

--- a/setup.cfg
+++ b/setup.cfg
@@ -56,7 +56,7 @@ colcon_core.event_handler =
 colcon_core.verb =
     cache = colcon_cache.verb.cache:CacheVerb
 colcon_core.package_augmentation =
-    default = colcon_cache.package_augmentation.default:DefaultPackageAugmentation
+    dirhash = colcon_cache.package_augmentation.dirhash:DirhashPackageAugmentation
     git = colcon_cache.package_augmentation.git:GitPackageAugmentation
 colcon_core.package_selection =
     cache = colcon_cache.package_selection.cache:CachePackageSelectionExtension
@@ -65,7 +65,7 @@ colcon_cache.subverb =
     capture = colcon_cache.subverb.capture:CaptureCacheSubverb
     # info = colcon_cache.subverb.info:InfoCacheSubverb
 colcon_cache.task.capture =
-    default = colcon_cache.task.capture.dirhash:DirhashCaptureTask
+    dirhash = colcon_cache.task.capture.dirhash:DirhashCaptureTask
     git = colcon_cache.task.capture.git:GitCaptureTask
 colcon_cache.verb_handler =
     build = colcon_cache.verb_handler.build:BuildVerbHandler
