Ignore deprecation warnings in 3rd party modules such as in scantree

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ zip_safe = true
 [tool:pytest]
 filterwarnings =
     error
+    ignore::DeprecationWarning:scantree.*:
 junit_suite_name = colcon-cache
 
 [options.entry_points]
