--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,9 @@ keywords = colcon
 [options]
 install_requires =
   colcon-core>=0.5.2
+  dirhash
+  GitPython
+  PyYAML
 packages = find:
 tests_require =
   flake8>=3.6.0
