--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -1,10 +1,12 @@
 -r ../requirements.txt
+flake8
 flake8-blind-except
 flake8-builtins
 flake8-class-newline
 flake8-comprehensions
 flake8-deprecated
 flake8-docstrings
+flake8-import-order
 flake8-quotes
 pep8-naming
 pylint
