--- a/setup.cfg
+++ b/setup.cfg
@@ -66,11 +66,11 @@ colcon_core.package_selection =
     cache = colcon_cache.package_selection.cache:CachePackageSelectionExtension
     lock = colcon_cache.package_selection.lock:LockPackageSelectionExtension
 colcon_cache.subverb =
-    capture = colcon_cache.subverb.capture:CaptureCacheSubverb
+    lock = colcon_cache.subverb.lock:LockCacheSubverb
     # info = colcon_cache.subverb.info:InfoCacheSubverb
-colcon_cache.task.capture =
-    dirhash = colcon_cache.task.capture.dirhash:DirhashCaptureTask
-    git = colcon_cache.task.capture.git:GitCaptureTask
+colcon_cache.task.lock =
+    dirhash = colcon_cache.task.lock.dirhash:DirhashLockTask
+    git = colcon_cache.task.lock.git:GitLockTask
 colcon_cache.verb_handler =
     build = colcon_cache.verb_handler.build:BuildVerbHandler
     cache = colcon_cache.verb_handler.cache:CacheVerbHandler
