--- a/setup.cfg
+++ b/setup.cfg
@@ -56,15 +56,15 @@ junit_suite_name = colcon-cache
 
 [options.entry_points]
 colcon_core.event_handler =
-    cache_lockfile = colcon_cache.event_handler.cache_lockfile:StoreLockfileEventHandler
+    cache_lockfile = colcon_cache.event_handler.cache_lockfile:CacheLockfileEventHandler
 colcon_core.verb =
     cache = colcon_cache.verb.cache:CacheVerb
 colcon_core.package_augmentation =
     cache_dirhash = colcon_cache.package_augmentation.cache_dirhash:DirhashPackageAugmentation
     cache_git = colcon_cache.package_augmentation.cache_git:GitPackageAugmentation
 colcon_core.package_selection =
-    cache_valid = colcon_cache.package_selection.valid:CachePackageSelectionExtension
-    cache_modified = colcon_cache.package_selection.modified:LockPackageSelectionExtension
+    cache_valid = colcon_cache.package_selection.valid:ValidPackageSelection
+    cache_modified = colcon_cache.package_selection.modified:ModifiedPackageSelection
 colcon_cache.subverb =
     lock = colcon_cache.subverb.lock:LockCacheSubverb
     # info = colcon_cache.subverb.info:InfoCacheSubverb
