--- a/setup.cfg
+++ b/setup.cfg
@@ -56,7 +56,7 @@ junit_suite_name = colcon-cache
 
 [options.entry_points]
 colcon_core.event_handler =
-    cache_lockfile = colcon_cache.event_handler.lockfile:CacheLockfileEventHandler
+    cache_lockfile = colcon_cache.event_handler.lockfile:LockfileEventHandler
 colcon_core.verb =
     cache = colcon_cache.verb.cache:CacheVerb
 colcon_core.package_augmentation =
