--- a/setup.cfg
+++ b/setup.cfg
@@ -63,8 +63,9 @@ colcon_core.package_augmentation =
     cache_dirhash = colcon_cache.package_augmentation.dirhash:DirhashPackageAugmentation
     cache_git = colcon_cache.package_augmentation.git:GitPackageAugmentation
 colcon_core.package_selection =
-    cache_valid = colcon_cache.package_selection.valid:ValidPackageSelection
+    cache_key = colcon_cache.package_selection.key:KeyPackageSelection
     cache_modified = colcon_cache.package_selection.modified:ModifiedPackageSelection
+    cache_valid = colcon_cache.package_selection.valid:ValidPackageSelection
 colcon_cache.subverb =
     lock = colcon_cache.subverb.lock:LockCacheSubverb
     # info = colcon_cache.subverb.info:InfoCacheSubverb
@@ -74,6 +75,7 @@ colcon_cache.task.lock =
 colcon_cache.verb_handler =
     build = colcon_cache.verb_handler.build:BuildVerbHandler
     cache = colcon_cache.verb_handler.cache:CacheVerbHandler
+    list = colcon_cache.verb_handler.cache:CacheVerbHandler
     test = colcon_cache.verb_handler.test:TestVerbHandler
 
 [flake8]
