--- a/setup.cfg
+++ b/setup.cfg
@@ -56,15 +56,15 @@ junit_suite_name = colcon-cache
 
 [options.entry_points]
 colcon_core.event_handler =
-    store_lockfile = colcon_cache.event_handler.store_lockfile:StoreLockfileEventHandler
+    lockfile = colcon_cache.event_handler.lockfile:StoreLockfileEventHandler
 colcon_core.verb =
     cache = colcon_cache.verb.cache:CacheVerb
 colcon_core.package_augmentation =
     dirhash = colcon_cache.package_augmentation.dirhash:DirhashPackageAugmentation
     git = colcon_cache.package_augmentation.git:GitPackageAugmentation
 colcon_core.package_selection =
-    cache = colcon_cache.package_selection.cache:CachePackageSelectionExtension
-    lock = colcon_cache.package_selection.lock:LockPackageSelectionExtension
+    valid = colcon_cache.package_selection.valid:CachePackageSelectionExtension
+    modified = colcon_cache.package_selection.modified:LockPackageSelectionExtension
 colcon_cache.subverb =
     lock = colcon_cache.subverb.lock:LockCacheSubverb
     # info = colcon_cache.subverb.info:InfoCacheSubverb
