--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,7 @@ jobs:
         pip install -r test/requirements.txt
     - name: Run tests
       run: |
+        python setup.py develop
         pytest --cov=colcon_cache --cov-branch
     - uses: codecov/codecov-action@v1
       if: matrix.python-version == '3.8'
