--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Run tests
       run: |
         python setup.py develop
-        pytest --cov=colcon_cache --cov-branch
+        pytest --cov=colcon_cache
     - uses: codecov/codecov-action@v1
       if: matrix.python-version == '3.8'
       with:
