--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,9 +21,10 @@ jobs:
         pip install -r test/requirements.txt
     - name: Run tests
       run: |
-        python setup.py develop
-        pytest --cov=colcon_cache
+        colcon build --symlink-install
+        colcon test
     - uses: codecov/codecov-action@v1
       if: matrix.python-version == '3.8'
+      files: build/colcon-cache/coverage.xml
       with:
         env_vars: OS,PYTHON
