--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,5 @@ jobs:
         colcon test
     - uses: codecov/codecov-action@v1
       if: matrix.python-version == '3.8'
-      files: build/colcon-cache/coverage.xml
       with:
-        env_vars: OS,PYTHON
+        files: ./build/colcon-cache/coverage.xml
