--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,6 @@ jobs:
       run: |
         colcon build --symlink-install
         colcon test
+        cp ./build/colcon-cache/coverage.xml ./
     - uses: codecov/codecov-action@v1
       if: matrix.python-version == '3.8'
-      with:
-        files: ./build/colcon-cache/coverage.xml
