Omit meta tests from code coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -83,3 +83,7 @@ import-order-style = google
 
 [coverage:run]
 branch = True
+omit =
+    test/test_copyright_license.py
+    test/test_flake8.py
+    test/test_spell_check.py
