--- a/codecov.yml
+++ b/codecov.yml
@@ -21,3 +21,8 @@ comment:
 
 fixes:
   - "build/lib/::"
+
+ignore:
+  - "test/test_copyright_license.py"
+  - "test/test_flake8.py"
+  - "test/test_spell_check.py"
