--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,4 +33,4 @@ jobs:
         name: coverage
         path: ./**/coverage.xml
     - uses: codecov/codecov-action@v1
-      if: matrix.python-version == '3.8'
+      if: always()
