--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,9 @@ jobs:
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         restore-keys: ${{ runner.os }}-pip-
     - name: Install dependencies
+      working-directory: src/colcon-cache
       run: |
-        pip install -r src/colcon-cache/test/requirements.txt
+        pip install -r test/requirements.txt
     - name: Run tests
       run: |
         colcon build
