Add system tests (#20)
* Add example src workspace

* Add test for main

* Add test verb

* Set coverage setting in config

* Use colcon build and test

* Skip matrix

* Simplify test action

* Use Path Fixing in codecov config
https://docs.codecov.com/docs/fixing-paths

* Ignore meta tests from code coverage
https://docs.codecov.com/docs/ignoring-paths

* Test package selection with list

* Fix spell check

* Try testing entry points for git

* Config git

* Try both dirhash and git

* Change spelling

* Always upload test coverage

* Remove if branch

* Add more cases for lock task and event handeler

* Ignore test folder from coverage

* Add more cases for package selection

* Run for all pushes and PRs
but only PRs that aren’t from this repo
https://github.community/t/duplicate-checks-on-push-and-pull-request-simultaneous-event/18012/5

* Just test pushes to master or any PRs

* Fix argument key error with logging

* Add test for package selection modified

* Add test for package selection valid

--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -1,4 +1,5 @@
 -r ../requirements.txt
+colcon-common-extensions
 flake8
 flake8-blind-except
 flake8-builtins
@@ -8,6 +9,7 @@ flake8-deprecated
 flake8-docstrings
 flake8-import-order
 flake8-quotes
+mock
 pep8-naming
 pylint
 pytest
