--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ tests_require =
   flake8-docstrings
   flake8-import-order
   flake8-quotes
+  mock
   pep8-naming
   pylint
   pytest
@@ -79,3 +80,6 @@ colcon_cache.verb_handler =
 
 [flake8]
 import-order-style = google
+
+[coverage:run]
+branch = True
