--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ classifiers =
     Programming Language :: Python
     Topic :: Software Development :: Build Tools
 license = Apache License, Version 2.0
-description = Extension for colcon to cache package source.
+description = Extension for colcon to cache the processing of packages.
 long_description = file: README.rst
 keywords = colcon
 
