--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,9 @@ tests_require =
   scspell3k>=2.2
 zip_safe = true
 
+[options.packages.find]
+exclude = test
+
 [tool:pytest]
 filterwarnings =
     error
