--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ classifiers =
     Topic :: Software Development :: Build Tools
 license = Apache License, Version 2.0
 description = Extension for colcon to cache the processing of packages.
-long_description = file: README.rst
+long_description = file: README.md
 keywords = colcon
 
 [options]
