Ignore a deprecation warning in scspell in Python 3.9+
https://github.com/ruffsl/colcon-clean/pull/16

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,7 @@ exclude = test
 filterwarnings =
     error
     ignore::DeprecationWarning:scantree.*:
+    ignore::PendingDeprecationWarning:scspell:
 junit_suite_name = colcon-cache
 
 [options.entry_points]
