Ignore a deprecation warning in flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,7 @@ exclude = test
 [tool:pytest]
 filterwarnings =
     error
+    ignore::DeprecationWarning:flake8:
     ignore::DeprecationWarning:scantree.*:
     ignore::PendingDeprecationWarning:scspell:
     ignore::pytest.PytestUnraisableExceptionWarning
