Add missing test_requires

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,9 @@ zip_safe = true
 
 [options.extras_require]
 test =
+  colcon-package-information>=0.3.3
+  colcon-package-selection>=0.2.10
+  colcon-test-result>=0.3.8
   flake8>=3.6.0
   flake8-blind-except
   flake8-builtins
