--- a/setup.cfg
+++ b/setup.cfg
@@ -63,6 +63,12 @@ junit_suite_name = colcon-cache
 [options.entry_points]
 colcon_core.event_handler =
     cache_lockfile = colcon_cache.event_handler.lockfile:LockfileEventHandler
+colcon_core.extension_point =
+    colcon_cache.subverb = colcon_cache.subverb:CacheSubverbExtensionPoint
+    colcon_cache.task = 
+        # TODO: break this into it's own locl class
+        lock = colcon_core.task:TaskExtensionPoint
+    colcon_cache.verb_handler = colcon_cache.verb_handler:VerbHandlerExtensionPoint
 colcon_core.verb =
     cache = colcon_cache.verb.cache:CacheVerb
 colcon_core.package_augmentation =
