--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ install_requires =
   colcon-core>=0.5.2
   dirhash
   GitPython
+  scandir;platform_system=='Windows'
 packages = find:
 zip_safe = true
 
