Ignore PytestUnraisableExceptionWarning on pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,7 @@ filterwarnings =
     error
     ignore::DeprecationWarning:scantree.*:
     ignore::PendingDeprecationWarning:scspell:
+    ignore::pytest.PytestUnraisableExceptionWarning
 junit_suite_name = colcon-cache
 
 [options.entry_points]
