Edit coverage config

--- a/setup.cfg
+++ b/setup.cfg
@@ -93,4 +93,7 @@ colcon_cache.verb_handler =
 import-order-style = google
 
 [coverage:run]
+branch = True
+omit =
+    */tests/*
 source = colcon_cache
