Edit coverage config

--- a/setup.cfg
+++ b/setup.cfg
@@ -94,6 +94,18 @@ import-order-style = google
 
 [coverage:run]
 branch = True
-omit =
-    */tests/*
-source = colcon_cache
+source =
+    colcon_cache
+    tests
+
+[coverage:paths]
+source =
+    colcon_cache
+
+[coverage:report]
+exclude_lines =
+    # Don't complain if tests don't hit defensive assertion code:
+    raise NotImplementedError()
+    assert False
+    # Don't complain if non-runnable code isn't run:
+    pass
