--- a/setup.cfg
+++ b/setup.cfg
@@ -29,11 +29,15 @@ install_requires =
   colcon-core>=0.5.2
   dirhash
   GitPython
+  scandir;platform_system=='Windows'
 packages = find:
 zip_safe = true
 
 [options.extras_require]
 test =
+  colcon-package-information>=0.3.3
+  colcon-package-selection>=0.2.10
+  colcon-test-result>=0.3.8
   flake8>=3.6.0
   flake8-blind-except
   flake8-builtins
@@ -58,6 +62,7 @@ filterwarnings =
     error
     ignore::DeprecationWarning:scantree.*:
     ignore::PendingDeprecationWarning:scspell:
+    ignore::pytest.PytestUnraisableExceptionWarning
 junit_suite_name = colcon-cache
 
 [options.entry_points]
@@ -89,4 +94,18 @@ import-order-style = google
 
 [coverage:run]
 branch = True
-source = colcon_cache
+source =
+    colcon_cache
+    tests
+
+[coverage:paths]
+source =
+    colcon_cache
+
+[coverage:report]
+exclude_lines =
+    # Don't complain if tests don't hit defensive assertion code:
+    raise NotImplementedError()
+    assert False
+    # Don't complain if non-runnable code isn't run:
+    pass
