--- a/setup.cfg
+++ b/setup.cfg
@@ -65,9 +65,7 @@ colcon_core.event_handler =
     cache_lockfile = colcon_cache.event_handler.lockfile:LockfileEventHandler
 colcon_core.extension_point =
     colcon_cache.subverb = colcon_cache.subverb:CacheSubverbExtensionPoint
-    colcon_cache.task = 
-        # TODO: break this into it's own locl class
-        lock = colcon_core.task:TaskExtensionPoint
+    colcon_cache.task.lock = colcon_core.task:TaskExtensionPoint
     colcon_cache.verb_handler = colcon_cache.verb_handler:VerbHandlerExtensionPoint
 colcon_core.verb =
     cache = colcon_cache.verb.cache:CacheVerb
@@ -80,7 +78,6 @@ colcon_core.package_selection =
     cache_valid = colcon_cache.package_selection.valid:ValidPackageSelection
 colcon_cache.subverb =
     lock = colcon_cache.subverb.lock:LockCacheSubverb
-    # info = colcon_cache.subverb.info:InfoCacheSubverb
 colcon_cache.task.lock =
     dirhash = colcon_cache.task.lock.dirhash:DirhashLockTask
     git = colcon_cache.task.lock.git:GitLockTask
