Register colcon-cache extension points (#38)
* Register colcon-clean extension points

* Cleanup

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,10 @@ junit_suite_name = colcon-cache
 [options.entry_points]
 colcon_core.event_handler =
     cache_lockfile = colcon_cache.event_handler.lockfile:LockfileEventHandler
+colcon_core.extension_point =
+    colcon_cache.subverb = colcon_cache.subverb:CacheSubverbExtensionPoint
+    colcon_cache.task.lock = colcon_core.task:TaskExtensionPoint
+    colcon_cache.verb_handler = colcon_cache.verb_handler:VerbHandlerExtensionPoint
 colcon_core.verb =
     cache = colcon_cache.verb.cache:CacheVerb
 colcon_core.package_augmentation =
@@ -79,7 +83,6 @@ colcon_core.package_selection =
     cache_valid = colcon_cache.package_selection.valid:ValidPackageSelection
 colcon_cache.subverb =
     lock = colcon_cache.subverb.lock:LockCacheSubverb
-    # info = colcon_cache.subverb.info:InfoCacheSubverb
 colcon_cache.task.lock =
     dirhash = colcon_cache.task.lock.dirhash:DirhashLockTask
     git = colcon_cache.task.lock.git:GitLockTask
