--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ zip_safe = true
 test =
   colcon-package-information>=0.3.3
   colcon-package-selection>=0.2.10
+  colcon-recursive-crawl
   colcon-test-result>=0.3.8
   flake8>=3.6.0
   flake8-blind-except
