Revert uneeded coverage changes

--- a/setup.cfg
+++ b/setup.cfg
@@ -99,13 +99,7 @@ import-order-style = google
 
 [coverage:run]
 branch = True
-source =
-    colcon_cache
-    tests
-
-[coverage:paths]
-source =
-    colcon_cache
+source = colcon_cache
 
 [coverage:report]
 exclude_lines =
