Excluding structurally partial branches

--- a/setup.cfg
+++ b/setup.cfg
@@ -103,8 +103,11 @@ source = colcon_cache
 
 [coverage:report]
 exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
     # Don't complain if tests don't hit defensive assertion code:
-    raise NotImplementedError()
     assert False
+    raise NotImplementedError()
     # Don't complain if non-runnable code isn't run:
     pass
+ 
