Add missing test dependency on colcon-recursive-crawl (#39)
* Add missing test dependency on colcon-recursive-crawl

* Revert uneeded coverage changes

* Excluding structurally partial branches

* Ignore defensive path check

* Format

Co-authored-by: ruffsl <roxfoxpox@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ zip_safe = true
 test =
   colcon-package-information>=0.3.3
   colcon-package-selection>=0.2.10
+  colcon-recursive-crawl
   colcon-test-result>=0.3.8
   flake8>=3.6.0
   flake8-blind-except
@@ -98,18 +99,14 @@ import-order-style = google
 
 [coverage:run]
 branch = True
-source =
-    colcon_cache
-    tests
-
-[coverage:paths]
-source =
-    colcon_cache
+source = colcon_cache
 
 [coverage:report]
 exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
     # Don't complain if tests don't hit defensive assertion code:
-    raise NotImplementedError()
     assert False
+    raise NotImplementedError()
     # Don't complain if non-runnable code isn't run:
     pass
