--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,8 @@ filterwarnings =
 junit_suite_name = colcon-cache
 
 [options.entry_points]
+colcon_clean.base_handler =
+    cache = colcon_cache.base_handler.cache:CacheBaseHandler
 colcon_core.event_handler =
     cache_lockfile = colcon_cache.event_handler.lockfile:LockfileEventHandler
 colcon_core.extension_point =
