Extend verb handlers to add arguments for specifying a verb's own base path

--- a/setup.cfg
+++ b/setup.cfg
@@ -93,7 +93,7 @@ colcon_cache.task.lock =
 colcon_cache.verb_handler =
     build = colcon_cache.verb_handler.build:BuildVerbHandler
     cache = colcon_cache.verb_handler.cache:CacheVerbHandler
-    list = colcon_cache.verb_handler.cache:CacheVerbHandler
+    list = colcon_cache.verb_handler.list:ListVerbHandler
     test = colcon_cache.verb_handler.test:TestVerbHandler
 
 [flake8]
