Update filterwarnings with new lib2to3 deprecation
https://github.com/colcon/colcon-clean/pull/30

--- a/setup.cfg
+++ b/setup.cfg
@@ -63,7 +63,7 @@ filterwarnings =
     error
     ignore::DeprecationWarning:flake8:
     ignore::DeprecationWarning:scantree.*:
-    ignore::PendingDeprecationWarning:scspell:
+    ignore:lib2to3 package is deprecated::scspell
     ignore::pytest.PytestUnraisableExceptionWarning
 junit_suite_name = colcon-cache
 
