--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,5 +1,5 @@
 [colcon-cache]
 No-Python2:
 Depends3: python3-colcon-core (>= 0.5.2), python3-dirhash, python3-scantree
-Suite: jammy
+Suite: jammy noble bookworm trixie
 X-Python3-Version: >= 3.6
