--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ zip_safe = true
 
 [options.extras_require]
 test =
+  colcon-defaults
   colcon-package-information>=0.3.3
   colcon-package-selection>=0.2.10
   colcon-recursive-crawl
@@ -62,6 +63,7 @@ exclude = test
 [tool:pytest]
 filterwarnings =
     error
+    ignore::DeprecationWarning:colcon_defaults:
     ignore::DeprecationWarning:flake8:
     ignore::DeprecationWarning:scantree.*:
     ignore:lib2to3 package is deprecated::scspell
