--- a/setup.cfg
+++ b/setup.cfg
@@ -69,6 +69,9 @@ filterwarnings =
     ignore:lib2to3 package is deprecated::scspell
     ignore::pytest.PytestUnraisableExceptionWarning
 junit_suite_name = colcon-cache
+markers =
+    flake8
+    linter
 
 [options.entry_points]
 colcon_core.event_handler =
