--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ install_requires =
   colcon-core>=0.5.2
   dirhash
   GitPython
+  scantree<0.0.2a0
   scandir;platform_system=='Windows'
 packages = find:
 zip_safe = true
