Add Dev Container for local development - https://github.com/colcon/colcon-clean/pull/39

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,16 @@
         "sched",
         "subverb",
         "subverbs"
-    ]
+    ],
+    "python.languageServer": "Default",
+    "python.testing.pytestArgs": [
+        "--cov",
+        "--cov-branch",
+        "--cov-report",
+        "xml:coverage.xml",
+        "--cov-config",
+        "setup.cfg"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
