Install jq via apt-get feature

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,13 @@
     "workspaceMount": "source=${localWorkspaceFolder},target=${containerWorkspaceFolder},type=bind",
     "onCreateCommand": ".devcontainer/on-create-command.sh",
     "postCreateCommand": ".devcontainer/post-create-command.sh",
+    "features": {
+        "ghcr.io/devcontainers-contrib/features/apt-get-packages:1": {
+            "packages": [
+                "jq",
+            ]
+        },
+    },
     "customizations": {
         "vscode": {
             "settings": {},
